<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pattern_search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_winner">WinnerActivity</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_loser">LoserActivity</string>
    <string name="patternsearch">Pattern Search</string>
    <string name="join">Join</string>
    <string name="create">Create</string>
    <string name="game_window">Pattern Search</string>
    <string name="distancefromlocation">Distance from the location</string>
    <string name="confirmposition">Confirm position</string>
    <string name="nowherenear">Nowhere near the target</string>
    <string name="confirmbutton">OK</string>
    <string name="yourresult">YOUR RESULT</string>
    <string name="exitbutton">Exit</string>
    <string name="restartbutton">restart</string>
    <string name="endgame">End Game</string>
    <string name="youlost">YOU LOST</string>
    <string name="rule_of_the_game">This game is about finding a position which the master phone hides. Rule of the game is the players would have to place their phones in a position that they think is close to the master\'s hidden position. The master will give feedback after each move taken by the players is confirmed. Follow the feedback messages from the master and try to get as close as u can to that position. Press the return key to go back to the main window.</string>
    <string name="ruleofthegame">RULE</string>
    <string name="title_activity_rule">title_activity_rule</string>
    <string name="WINNER">CONGRATULATIONS! YOU WON!</string>
    <string name="exit">Quit</string>
    <string name="restart">Play Again</string>

</resources>
